deploy: c119c55a10051ff9f222444e73b7bb02f08bcd0e

--- a/coverage_html_report/z_694c6539f1290e86_pyfhd_quickview_py.html
+++ b/coverage_html_report/z_694c6539f1290e86_pyfhd_quickview_py.html
@@ -67,7 +67,7 @@
             <a id="nextFileLink" class="nav" href="z_449038fa3ad179d9___init___py.html">&#xbb; next</a>
             &nbsp; &nbsp; &nbsp;
             <a class="nav" href="https://coverage.readthedocs.io/en/7.9.1">coverage.py v7.9.1</a>,
-            created at 2025-06-24 14:21 +0000
+            created at 2025-07-03 01:06 +0000
         </p>
         <aside class="hidden">
             <button type="button" class="button_next_chunk" data-shortcut="j"></button>
@@ -313,7 +313,7 @@
     <p class="mis show_mis"><span class="n"><a id="t229" href="#t229">229</a></span><span class="t">            <span class="nam">beam_mask_test</span> <span class="op">=</span> <span class="nam">beam_base_out</span><span class="op">[</span><span class="nam">pol_i</span><span class="op">]</span>&nbsp;</span><span class="r"></span></p>
     <p class="mis show_mis"><span class="n"><a id="t230" href="#t230">230</a></span><span class="t">            <span class="key">if</span> <span class="nam">pyfhd_config</span><span class="op">[</span><span class="str">"allow_sidelobe_model_sources"</span><span class="op">]</span><span class="op">:</span>&nbsp;</span><span class="r"></span></p>
     <p class="mis show_mis"><span class="n"><a id="t231" href="#t231">231</a></span><span class="t">                <span class="nam">beam_i</span> <span class="op">=</span> <span class="nam">np</span><span class="op">.</span><span class="nam">where</span><span class="op">(</span>&nbsp;</span><span class="r"></span></p>
-    <p class="pln"><span class="n"><a id="t232" href="#t232">232</a></span><span class="t">                    <span class="nam">beam_mask_test</span> <span class="op">>=</span> <span class="num">0.025</span>&nbsp;</span><span class="r"></span></p>
+    <p class="pln"><span class="n"><a id="t232" href="#t232">232</a></span><span class="t">                    <span class="nam">beam_mask_test</span><span class="op">.</span><span class="nam">flat</span> <span class="op">>=</span> <span class="num">0.025</span>&nbsp;</span><span class="r"></span></p>
     <p class="pln"><span class="n"><a id="t233" href="#t233">233</a></span><span class="t">                <span class="op">)</span>  <span class="com"># This is beam_threshold/2 in FHD</span>&nbsp;</span><span class="r"></span></p>
     <p class="pln"><span class="n"><a id="t234" href="#t234">234</a></span><span class="t">            <span class="key">else</span><span class="op">:</span>&nbsp;</span><span class="r"></span></p>
     <p class="mis show_mis"><span class="n"><a id="t235" href="#t235">235</a></span><span class="t">                <span class="nam">beam_i</span> <span class="op">=</span> <span class="nam">region_grow</span><span class="op">(</span>&nbsp;</span><span class="r"></span></p>
@@ -569,7 +569,7 @@
             <a class="nav" href="z_449038fa3ad179d9___init___py.html">&#xbb; next</a>
             &nbsp; &nbsp; &nbsp;
             <a class="nav" href="https://coverage.readthedocs.io/en/7.9.1">coverage.py v7.9.1</a>,
-            created at 2025-06-24 14:21 +0000
+            created at 2025-07-03 01:06 +0000
         </p>
     </div>
 </footer>
